--- a/test.html
+++ b/test.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
 <head>
-<meta charset="UTF-8">
-<title>Exterior Painting & Maintenance Calculator</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" user-scalable=no/>
+<title>Exterior Painting & Maintenance Calculator | Home Repairs 4U</title>
+<link rel="icon" href="/favicon.png" type="image/png">
 <style>
-body { font-family: Arial, Helvetica, sans-serif; background:#f2f2f2; padding:20px; }
+body { font-family: Arial, Helvetica, sans-serif; background:#f2f2f2; padding:20px; margin:0; }
+header{text-align:center;padding:25px 10px;background:#fff;border-bottom:4px solid #27ae60;}
+.logo{max-height:90px;width:auto;}
+.call-btn{display:inline-block;margin-top:18px;padding:14px 28px;background:#000;color:#fff;font-size:19px;text-decoration:none;font-weight:bold;border-radius:6px;border:2px solid #000;}
+.call-btn:hover{background:#333;color:#fff;}
+footer{background:#000;color:#fff;text-align:center;padding:25px 15px;margin-top:40px;font-size:14px;}
 .calculator { max-width: 950px; margin:auto; background:#fff; padding:30px; border-radius:8px; }
 h1 { text-align:center; }
 h3 { margin-top:30px; border-bottom:1px solid #ddd; padding-bottom:5px; }
@@ -19,6 +26,16 @@ button:hover { background:#155f35; }
 </head>
 
 <body>
+
+<header>
+<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
+<div style="text-align:center; margin-top:10px;">
+<a href="https://homerepairs4u.com/" style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+<br>
+<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+</header>
+
 <div class="calculator">
 <h1>Exterior Painting & Maintenance Calculator</h1>
 
@@ -170,5 +187,25 @@ result.innerHTML = `<strong>Total Fixed Price</strong><br><br>
 }
 </script>
 </div>
+
+<footer>
+<p>📞 Call 07735 873694</p>
+<footer style="background:#000; color:#fff; text-align:center; padding:28px 15px; font-size:14px;">
+<div>
+© Home Repairs 4U | Service Areas, Doncaster
+<br><br>
+<a href="/services/guttering.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Guttering</a> |
+<a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Pressure Washing</a> |
+<a href="/services/fence-installation.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Fencing</a> |
+<a href="/services/upvc-restoration.html" style="color:#fff; text-decoration:underline; margin:0 6px;">uPVC Restoration</a> |
+<a href="/services/service-areas.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Service Areas</a>
+<br><br>
+<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">
+Facebook
+</a>
+</div>
+</footer>
+</footer>
+
 </body>
 </html>
