--- a/test.html
+++ b/test.html
@@ -14,14 +14,16 @@ header{text-align:center;padding:25px 10px;background:#fff;border-bottom:4px sol
 footer{background:#000;color:#fff;text-align:center;padding:25px 15px;margin-top:40px;font-size:14px;}
 .calculator { max-width: 950px; margin:auto; background:#fff; padding:30px; border-radius:8px; }
 h1 { text-align:center; }
-h3 { margin-top:30px; border-bottom:1px solid #ddd; padding-bottom:5px; }
+h3 { margin-top:30px; border-bottom:1px solid #ddd; padding-bottom:5px; cursor:pointer; }
 label { display:block; margin:8px 0; }
 input[type="number"], select { width:220px; padding:6px; }
 button { margin-top:30px; background:#1c7c45; color:#fff; border:none; padding:15px 30px; font-size:18px; border-radius:5px; cursor:pointer; }
 button:hover { background:#155f35; }
 .result { margin-top:30px; padding:25px; background:#eef7f0; border-radius:6px; font-size:20px; text-align:center; }
-.extra-group { background:#fafafa; padding:15px; border-radius:5px; margin-top:15px; }
+.extra-group { background:#fafafa; padding:15px; border-radius:5px; margin-top:5px; display:none; }
 .small { font-size:14px; color:#555; margin-top:5px; }
+.optional-header::after { content: " ▼"; font-weight:bold; }
+.optional-header.active::after { content: " ▲"; }
 </style>
 </head>
 
@@ -39,8 +41,8 @@ button:hover { background:#155f35; }
 <div class="calculator">
 <h1>External Makeover Calculator</h1>
 
-<!-- Property Details -->
-<h3>1. Property Type</h3>
+<!-- Mandatory Property Details -->
+<h3>1. Property Type <span class="small">(required for quote)</span></h3>
 <select id="propertyType" required>
 <option value="">-- Select --</option>
 <option value="bungalow">Bungalow</option>
@@ -48,9 +50,9 @@ button:hover { background:#155f35; }
 <option value="semi">Semi-detached</option>
 <option value="detached">Detached</option>
 </select>
-<p class="small">We ask about your property type to tailor the service to your building structure and for future pricing adjustments. This helps us provide a more accurate quote as we expand our calculator.</p>
+<p class="small">We need your property type to tailor the service and calculate an accurate quote.</p>
 
-<h3>2. Number of Bedrooms</h3>
+<h3>2. Number of Bedrooms <span class="small">(required for quote)</span></h3>
 <select id="bedrooms" required>
 <option value="">-- Select --</option>
 <option value="1">1</option>
@@ -59,32 +61,31 @@ button:hover { background:#155f35; }
 <option value="4">4</option>
 <option value="5+">5+</option>
 </select>
-<p class="small">Providing the number of bedrooms helps us plan services like UPVC restoration or painting coverage. This is optional for now.</p>
+<p class="small">Required for planning services like UPVC restoration or painting coverage.</p>
 
-<h3>3. UPVC Conservatory</h3>
+<h3>3. UPVC Conservatory <span class="small">(required for quote)</span></h3>
 <select id="conservatory" required>
 <option value="">-- Select --</option>
 <option value="yes">Yes</option>
 <option value="no">No</option>
 </select>
-<p class="small">Let us know if you have a conservatory so we can offer UPVC or roof cleaning services. Optional at this stage.</p>
+<p class="small">We need to know if a conservatory exists to provide optional restoration or cleaning services.</p>
 
-<h3>4. Number of Storeys</h3>
-<select id="storeys">
+<h3>4. Number of Storeys <span class="small">(required for quote)</span></h3>
+<select id="storeys" required>
 <option value="1">1</option>
 <option value="2">2</option>
 <option value="3">3</option>
 </select>
 
-<!-- Elevations -->
-<h3>5. Elevations to Paint (metres)</h3>
-<p class="small">Painting is optional. Enter lengths only if you want exterior walls painted as part of your makeover.</p>
+<!-- Optional Sections -->
+<h3 class="optional-header">5. Elevations to Paint (metres) – Optional</h3>
+<div class="extra-group">
+<p class="small">Enter lengths only if you want exterior walls painted.</p>
 <label>Front <input type="number" id="front" step="0.1"></label>
 <label>Rear <input type="number" id="rear" step="0.1"></label>
 <label>Side left <input type="number" id="sideLeft" step="0.1"></label>
 <label>Side right <input type="number" id="sideRight" step="0.1"></label>
-
-<h3>6. Wall Surface</h3>
 <select id="surface">
 <option value="28">Render</option>
 <option value="32">Pebbledash</option>
@@ -92,35 +93,31 @@ button:hover { background:#155f35; }
 <option value="35">Unpainted brick</option>
 <option value="38">Stone</option>
 </select>
-
-<h3>7. Access Required</h3>
 <label><input type="radio" name="access" value="0" checked> Ladders</label>
 <label><input type="radio" name="access" value="450"> Scaffold tower</label>
 <label><input type="radio" name="access" value="750"> Scaffold over conservatory</label>
 <label><input type="radio" name="access" value="1200"> Full scaffold</label>
+</div>
 
-<!-- Section 1: Guttering -->
-<h3>8. Optional Extras – Guttering</h3>
-<p class="small">All guttering services are optional. Enter lengths only if you want these services included.</p>
+<h3 class="optional-header">6. Optional Extras – Guttering</h3>
 <div class="extra-group">
+<p class="small">Enter lengths only if you want these services included.</p>
 <label><input type="checkbox" id="gc"> Gutter clearing</label><input type="number" id="gcm" step="0.1">
 <label><input type="checkbox" id="gw"> Gutter & fascia washing</label><input type="number" id="gwm" step="0.1">
 <label><input type="checkbox" id="gr"> Gutter replacement</label><input type="number" id="grm" step="0.1">
 </div>
 
-<!-- Section 2: UPVC Restoration -->
-<h3>9. Optional Extras – UPVC Restoration</h3>
-<p class="small">UPVC restoration is optional. Select only the services you want included.</p>
+<h3 class="optional-header">7. Optional Extras – UPVC Restoration</h3>
 <div class="extra-group">
+<p class="small">Select only the services you want included.</p>
 <label><input type="checkbox" id="upvcRestore"> UPVC frames restoration</label>
 <label><input type="checkbox" id="upvcConservatory"> Restore UPVC conservatory</label>
 <label><input type="checkbox" id="upvcRoof"> Clean conservatory roof</label>
 </div>
 
-<!-- Section 3: Pressure Washing -->
-<h3>10. Optional Extras – Pressure Washing</h3>
-<p class="small">Pressure washing is optional. Include only areas you want cleaned or treated.</p>
+<h3 class="optional-header">8. Optional Extras – Pressure Washing</h3>
 <div class="extra-group">
+<p class="small">Include only areas you want cleaned or treated.</p>
 <label>Total area to pressure wash (m²): <input type="number" id="pwArea" step="0.1"></label>
 <label><input type="checkbox" id="pwJet"> Jet wash only</label>
 <label><input type="checkbox" id="pwFung"> Fungicide treatment</label>
@@ -129,10 +126,9 @@ button:hover { background:#155f35; }
 <label><input type="checkbox" id="pwSeal"> Sealing</label>
 </div>
 
-<!-- Section 4: Fence Installation -->
-<h3>11. Optional Extras – Fence Installation</h3>
-<p class="small">Fence installation is optional. Enter length only if you want a fence included in your makeover.</p>
+<h3 class="optional-header">9. Optional Extras – Fence Installation</h3>
 <div class="extra-group">
+<p class="small">Enter length only if you want a fence included.</p>
 <label>Length of fence to install (metres): <input type="number" id="fenceLength" step="0.1"></label>
 </div>
 
@@ -140,35 +136,45 @@ button:hover { background:#155f35; }
 <div class="result" id="result"></div>
 
 <script>
+// Toggle optional sections
+document.querySelectorAll('.optional-header').forEach(header=>{
+header.addEventListener('click', ()=>{
+header.classList.toggle('active');
+const content = header.nextElementSibling;
+if(content.style.display==="block"){ content.style.display="none"; }
+else{ content.style.display="block"; }
+});
+});
+
 function calculateQuote() {
 const propertyVal = document.getElementById("propertyType").value;
 const bedsVal = document.getElementById("bedrooms").value;
 const conservVal = document.getElementById("conservatory").value;
-if(!propertyVal || !bedsVal || !conservVal) { alert("Complete property info."); return; }
-
 const storeysVal = parseInt(document.getElementById("storeys").value);
-const surfaceRate = parseFloat(document.getElementById("surface").value);
 
-const frontVal = parseFloat(document.getElementById("front").value) || 0;
-const rearVal = parseFloat(document.getElementById("rear").value) || 0;
-const sideLVal = parseFloat(document.getElementById("sideLeft").value) || 0;
-const sideRVal = parseFloat(document.getElementById("sideRight").value) || 0;
+if(!propertyVal || !bedsVal || !conservVal || !storeysVal) {
+alert("Please complete all required property details.");
+return;
+}
 
+const frontVal = parseFloat(document.getElementById("front")?.value) || 0;
+const rearVal = parseFloat(document.getElementById("rear")?.value) || 0;
+const sideLVal = parseFloat(document.getElementById("sideLeft")?.value) || 0;
+const sideRVal = parseFloat(document.getElementById("sideRight")?.value) || 0;
+const surfaceRate = parseFloat(document.getElementById("surface")?.value) || 0;
 const totalLength = frontVal + rearVal + sideLVal + sideRVal;
 const area = totalLength * storeysVal * 2.5;
 let wallCost = area * surfaceRate;
 if(storeysVal===2) wallCost *=1.15;
 if(storeysVal===3) wallCost *=1.3;
 
-const accessCost = parseFloat(document.querySelector('input[name="access"]:checked').value);
+const accessCost = parseFloat(document.querySelector('input[name="access"]:checked')?.value) || 0;
 
-/* Guttering */
 let gutterCost = 0;
 if(gc.checked) gutterCost += (parseFloat(gcm.value)||0)*5;
 if(gw.checked) gutterCost += (parseFloat(gwm.value)||0)*5;
 if(gr.checked) gutterCost += (parseFloat(grm.value)||0)*15;
 
-/* UPVC */
 let upvcCost = 0;
 if(upvcRestore.checked){
 const baseTable = {"bungalow-1":30,"terraced-2":40,"semi-2":50,"detached-2":60,"terraced-3":50,"semi-3":60,"detached-3":70};
@@ -179,9 +185,8 @@ if(upvcConservatory.checked && conservVal==="yes") upvcCost+=40;
 if(upvcRoof.checked && conservVal==="yes") upvcCost+=60;
 }
 
-/* Pressure Washing */
 let pwCost = 0;
-const pwArea = parseFloat(document.getElementById("pwArea").value) || 0;
+const pwArea = parseFloat(document.getElementById("pwArea")?.value) || 0;
 if(pwArea>0 && (pwJet.checked||pwFung.checked||pwScrub.checked||pwResand.checked||pwSeal.checked)){
 pwCost += 50;
 if(pwJet.checked) pwCost += pwArea*2.75;
@@ -191,15 +196,12 @@ if(pwResand.checked) pwCost += pwArea*3.9;
 if(pwSeal.checked) pwCost += pwArea*4.5;
 }
 
-/* Fence Installation */
 let fenceCost = 0;
-const fenceLength = parseFloat(document.getElementById("fenceLength").value) || 0;
+const fenceLength = parseFloat(document.getElementById("fenceLength")?.value) || 0;
 if(fenceLength>0) fenceCost = fenceLength * 145;
 
-/* Total */
 const total = wallCost + accessCost + gutterCost + upvcCost + pwCost + fenceCost;
 
-// Show only total price
 result.innerHTML = `<strong>Your Total Fixed Price:</strong><br><br>£${total.toFixed(0)}`;
 }
 </script>
